Some typos and better maven code